--- a/ServerSide/LocalConsoleSiloHost/appsettings.Development.json
+++ b/ServerSide/LocalConsoleSiloHost/appsettings.Development.json
@@ -36,14 +36,16 @@
       "LoadPaths": [
         "{GrainLoadPath}/HelloWorld.Grain/bin/Debug/netcoreapp3.1/HelloWorld.Grain.dll",
         "{GrainLoadPath}/MyReminder.Grain/bin/Debug/netcoreapp3.1/MyReminder.Grain.dll",
-        "{GrainLoadPath}/NumberGenerator.Grain/bin/Debug/netcoreapp3.1/NumberGenerator.Grain.dll",
+//        "{GrainLoadPath}/NumberGenerator.Grain/bin/Debug/netcoreapp3.1/NumberGenerator.Grain.dll",
         "{GrainLoadPath}/ComplexTypeDemo.Grain/bin/Debug/netcoreapp3.1/ComplexTypeDemo.Grain.dll"
       ],
       "ExcludedTypeFullNames": []
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console" ],
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -57,11 +59,25 @@
     "WriteTo": [
       {
         "Name": "Console",
-        "Args": { "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console" }
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+        }
       },
-      { "Name": "Trace" },
-      { "Name": "Debug" }
+      {
+        "Name": "Trace"
+      },
+      {
+        "Name": "Debug"
+      }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithProcessName", "WithEnvironmentUserName", "WithThreadId", "WithExceptionDetails" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithProcessName",
+      "WithEnvironmentUserName",
+      "WithThreadId",
+      "WithExceptionDetails"
+    ]
   }
 }
